# tests/__snapshots__/Protocol/OpenAPITest__test_has_flight_openapi_document__1.json
@@ -19,6 +19,7 @@
         "/passengers": {
             "get": {
                 "summary": "Get entities from passengers",
+                "operationId": "querypassengers",
                 "tags": [
                     "passengers"
                 ],
@@ -134,6 +135,7 @@
             },
             "post": {
                 "summary": "Add new entity to passengers",
+                "operationId": "addpassengers",
                 "tags": [
                     "passengers"
                 ],
@@ -143,7 +145,7 @@
                     "content": {
                         "application/json": {
                             "schema": {
-                                "$ref": "#/components/schemas/com.example.odata.passenger~create"
+                                "$ref": "#/components/schemas/com.example.odata.passenger-create"
                             }
                         }
                     }
@@ -186,6 +188,7 @@
             ],
             "get": {
                 "summary": "Get entity from passengers by key",
+                "operationId": "getpassengersByKey",
                 "tags": [
                     "passengers"
                 ],
@@ -237,6 +240,7 @@
             },
             "patch": {
                 "summary": "Update entity in passengers",
+                "operationId": "updatepassengers",
                 "tags": [
                     "passengers"
                 ],
@@ -246,14 +250,21 @@
                     "content": {
                         "application/json": {
                             "schema": {
-                                "$ref": "#/components/schemas/com.example.odata.passenger~update"
+                                "$ref": "#/components/schemas/com.example.odata.passenger-update"
                             }
                         }
                     }
                 },
                 "responses": {
                     "200": {
-                        "$ref": "#/components/schemas/com.example.odata.passenger"
+                        "description": "Updated entity",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/com.example.odata.passenger"
+                                }
+                            }
+                        }
                     },
                     "204": {
                         "description": "Success"
@@ -265,6 +276,7 @@
             },
             "delete": {
                 "summary": "Delete entity from passengers",
+                "operationId": "deletepassengers",
                 "tags": [
                     "passengers"
                 ],
@@ -389,6 +401,7 @@
         "/$batch": {
             "post": {
                 "summary": "Send a group of requests",
+                "operationId": "batch",
                 "description": "Group multiple requests into a single request payload, see [Batch Requests](https://docs.oasis-open.org/odata/odata/v4.01/odata-v4.01-part1-protocol.html#sec_BatchRequests)",
                 "tags": [
                     "Batch Requests"
@@ -399,7 +412,39 @@
                     "content": {
                         "application/json": {
                             "schema": {
-                                "type": "string"
+                                "type": "object",
+                                "properties": {
+                                    "requests": {
+                                        "type": "array",
+                                        "items": {
+                                            "type": "object",
+                                            "properties": {
+                                                "id": {
+                                                    "type": "string"
+                                                },
+                                                "method": {
+                                                    "type": "string",
+                                                    "enum": [
+                                                        "get",
+                                                        "post",
+                                                        "patch",
+                                                        "put",
+                                                        "delete"
+                                                    ]
+                                                },
+                                                "url": {
+                                                    "type": "string"
+                                                },
+                                                "headers": {
+                                                    "type": "object"
+                                                },
+                                                "body": {
+                                                    "type": "string"
+                                                }
+                                            }
+                                        }
+                                    }
+                                }
                             },
                             "example": {
                                 "requests": [
@@ -434,7 +479,26 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "type": "string"
+                                    "type": "object",
+                                    "properties": {
+                                        "responses": {
+                                            "type": "array",
+                                            "items": {
+                                                "type": "object",
+                                                "properties": {
+                                                    "id": {
+                                                        "type": "string"
+                                                    },
+                                                    "status": {
+                                                        "type": "integer"
+                                                    },
+                                                    "body": {
+                                                        "type": "string"
+                                                    }
+                                                }
+                                            }
+                                        }
+                                    }
                                 },
                                 "example": {
                                     "responses": [
@@ -469,6 +533,7 @@
         "schemas": {
             "com.example.odata.passenger": {
                 "type": "object",
+                "title": "passenger",
                 "properties": {
                     "id": {
                         "type": "integer",
@@ -562,8 +627,9 @@
                     }
                 }
             },
-            "com.example.odata.passenger~create": {
+            "com.example.odata.passenger-create": {
                 "type": "object",
+                "title": "passenger (Create Schema)",
                 "properties": {
                     "name": {
                         "type": "string",
@@ -650,8 +716,9 @@
                     }
                 }
             },
-            "com.example.odata.passenger~update": {
+            "com.example.odata.passenger-update": {
                 "type": "object",
+                "title": "passenger (Update Schema)",
                 "properties": {
                     "name": {
                         "type": "string",
@@ -891,6 +958,7 @@
                         "type": "string"
                     }
                 ],
+                "title": "Count (parameter)",
                 "description": "The number of entities in the collection. Available when using the [$count](https://docs.oasis-open.org/odata/odata/v4.01/odata-v4.01-part1-protocol.html#sec_SystemQueryOptioncount) query option"
             }
         },
